Added signup feature

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -30,9 +30,9 @@
 # available at https://guides.rubyonrails.org/i18n.html.
 
 en:
-  hello: "Hello world"
-  successfully_created: "Task was successfully created!"
-  successfully_updated: "Task was successfully updated!"
+  successfully_created: "%{entity} was successfully created!"
+  successfully_updated: "%{entity} was successfully updated!"
   task:
     slug:
       immutable: "is immutable!"
+
