--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,7 +1,13 @@
 en:
+  authorization:
+    denied: "Access denied. You are not authorized to perform this action."
+  session:
+    could_not_auth: "Could not authenticate with the provided credentials."
+    incorrect_credentials: "Incorrect credentials, try again."
   successfully_created: "%{entity} was successfully created!"
   successfully_updated: "%{entity} was successfully updated!"
   successfully_deleted: "%{entity} was successfully deleted!"
   task:
     slug:
       immutable: "is immutable!"
+    not_found: "Couldn't find Task"
